samples/_failures_safe/1761306505_ffd5ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3269c244.c: In function ‘main’:
./samples/SAFE/__tmp_3269c244.c:150:17: error: expected declaration or statement at end of input
  150 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_3269c244.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3269c244.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3269c244.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3269c244.c:150:17: error: expected declaration or statement at end of input
